--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	</head>
 	<body>
 		<header>
-			<h1>Multiple Practice Projects with Objects</h1>
+			<h1>Zachs con coins</h1>
 		</header>
 			<section id="content">
 				<canvas id="Balloon" data-processing-sources="Balloon.pde">
