--- a/index.html
+++ b/index.html
@@ -12,11 +12,9 @@
 			<h1>Zachs con coins</h1>
 		</header>
 			<section id="content">
-				<canvas id="Balloon" data-processing-sources="Balloon.pde">
-				</canvas>
 				<canvas id="Coin" data-processing-sources="Coin.pde">
 				</canvas>				
-				<canvas id="Con" data-processing-sources="Con.pde">
+				<canvas id="Con" data-processing-sources="coinCon.pde">
 				</canvas>			    	
 			</section>
 	    <footer>
