--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<h1>Zachs con coins</h1>
 		</header>
 			<section id="content">
-				<canvas id="Coin" data-processing-sources="Coin.pde">
+				<canvas id="Coin" data-processing-sources="coinProj.pde">
 				</canvas>				
 				<canvas id="Con" data-processing-sources="coinCon.pde">
 				</canvas>			    	
