--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 			<h1>Zachs con coins</h1>
 		</header>
 			<section id="content">
-				<canvas id="Coin" data-processing-sources="coinProj.pde">
+				<canvas id="Coin" data-processing-sources="coinProj.pde Coin.pde">
 				</canvas>				
-				<canvas id="Con" data-processing-sources="coinCon.pde">
+				<canvas id="Con" data-processing-sources="coinCon.pde CoinC.pde">
 				</canvas>			    	
 			</section>
 	    <footer>
